	PR c/67854 	* gimplify.c (gimplify_va_arg_expr): Use expanded location for the 	"is promoted to" warning.

* gcc.dg/pr67854.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233891 138bc75d-0d04-0410-961f-82ee72b054a4